[gd_scene load_steps=3 format=3 uid="uid://cdklgov7mtnc2"]

[ext_resource type="Script" uid="uid://cc2g1hnlep7pd" path="res://scenes/pages/campaigns_list_page.gd" id="1_y31hc"]
[ext_resource type="PackedScene" uid="uid://db7n32karbfnd" path="res://scenes/components/campaign_button.tscn" id="2_o0468"]

[node name="CampaignsListPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_y31hc")
button_resource = ExtResource("2_o0468")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Campaigns"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="ListCampaigns" type="VBoxContainer" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CampaignButton" parent="Panel/VBoxContainer/ListCampaigns" instance=ExtResource("2_o0468")]
layout_mode = 2

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
